<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/start_background"
    android:orientation="vertical"
    tools:context=".startActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="end"
        android:paddingRight="10dp">

        <ImageView
            android:id="@+id/more"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@drawable/more" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/catch_the_star"
            android:textColor="@color/colorPrimary"
            android:textColorHighlight="#000000"
            android:textSize="45sp" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <TableRow android:gravity="center_vertical">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/pink" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/_30_point"
                    android:textSize="20sp" />

            </TableRow>

            <TableRow
                android:layout_marginTop="20dp"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/orange" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/_10_point"
                    android:textSize="20sp" />

            </TableRow>

            <TableRow
                android:layout_marginTop="20dp"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/game_over"
                    android:textSize="20sp" />
            </TableRow>

        </TableLayout>

        <Button
            android:id="@+id/playbutton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/button"
            android:minHeight="48dp"
            android:text="@string/play"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/leaderboradbutton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/button"
            android:minHeight="48dp"
            android:text="@string/leaderboard"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>

</LinearLayout>