<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/stageLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:text="@string/stage"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/scoreLabel"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/score_0"
            android:layout_weight="10"
            android:textSize="20sp"
            android:paddingLeft="20dp"
            android:gravity="center_vertical"/>

        <ImageView
            android:id="@+id/pauseoption"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:src="@drawable/pause"
            tools:ignore="SpeakableTextPresentCheck" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/stage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/warning"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="#FF0000"
            android:visibility="gone" />

        <TextView
            android:id="@+id/startLabel"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="130dp"
            android:gravity="center"
            android:text="@string/tap_to_start"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/box"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/down"
            android:layout_gravity="center_vertical"/>

        <ImageView
            android:id="@+id/orange"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/orange" />

        <ImageView
            android:id="@+id/black"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/black" />

        <ImageView
            android:id="@+id/pink"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/pink" />

    </FrameLayout>

</LinearLayout>